--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -2,7 +2,7 @@
   <form id="login-form" [formGroup]="loginForm" (submit)="submit()">
     <p>
       <label for="login">Identifiant</label>
-      <input id="login" type="text" formControlName="login" />
+      <input id="login" name="login" type="text" formControlName="login" />
       @if (
         (loginForm.controls.login.touched || loginForm.controls.login.dirty) &&
         loginForm.controls.login.errors
@@ -18,7 +18,7 @@
     </p>
     <p>
       <label for="password">Mot de passe</label>
-      <input id="password" type="password" formControlName="password" />
+      <input id="password" name="password" type="password" formControlName="password" />
       @if (
         (loginForm.controls.password.touched || loginForm.controls.password.dirty) &&
         loginForm.controls.password.errors
@@ -32,6 +32,6 @@
         </span>
       }
     </p>
-    <button type="submit">Log in</button>
+    <button type="submit" [disabled]="loginForm.invalid">Log in</button>
   </form>
 </div>
