--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,37 +1,43 @@
 <div class="login-form-container">
   <form id="login-form" [formGroup]="loginForm" (submit)="submit()">
-    <p>
-      <label for="login">Identifiant</label>
-      <input id="login" name="login" type="text" formControlName="login" />
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput id="login" name="login" type="text" formControlName="login" />
       @if (
         (loginForm.controls.login.touched || loginForm.controls.login.dirty) &&
-        loginForm.controls.login.errors
+        loginForm.controls.login.errors?.['required']
       ) {
-        <span class="help-block">
-          @if (loginForm.controls.login.errors['required']) {
-            <span> Enter your login </span>
-          } @else if (loginForm.controls.login.errors['minlength']) {
-            <span> The login must have a minimum of 3 characters. </span>
-          }
-        </span>
+        <mat-error>Enter your login</mat-error>
+      } @else if (
+        (loginForm.controls.login.touched || loginForm.controls.login.dirty) &&
+        loginForm.controls.login.errors?.['minlength']
+      ) {
+        <mat-error test-id="minLengthLogin">
+          The login must have a minimum of 3 characters.</mat-error
+        >
       }
-    </p>
-    <p>
-      <label for="password">Mot de passe</label>
-      <input id="password" name="password" type="password" formControlName="password" />
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Password</mat-label>
+      <input matInput id="password" name="password" type="password" formControlName="password" />
       @if (
         (loginForm.controls.password.touched || loginForm.controls.password.dirty) &&
-        loginForm.controls.password.errors
+        loginForm.controls.password.errors?.['required']
       ) {
-        <span class="help-block">
-          @if (loginForm.controls.password.errors['required']) {
-            <span> Enter your password </span>
-          } @else if (loginForm.controls.password.errors['checkPassword']) {
-            <span> The password must have a minimum of 5 characters. </span>
-          }
-        </span>
+        <mat-error test-id="requiredPassword">Enter your password</mat-error>
+      } @else if (
+        (loginForm.controls.password.touched || loginForm.controls.password.dirty) &&
+        loginForm.controls.password.errors?.['checkPassword']
+      ) {
+        <mat-error test-id="minLengthPassword"
+          >The password must have a minimum of 5 characters.</mat-error
+        >
       }
-    </p>
-    <button type="submit" [disabled]="loginForm.invalid">Log in</button>
+    </mat-form-field>
+
+    <button mat-button type="submit" [disabled]="loginForm.invalid" color="primary">
+      Validate
+    </button>
   </form>
 </div>
