--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,20 @@
 <mat-toolbar>
   <h1>{{ title() }}</h1>
   <span class="example-spacer"></span>
-  <button
-    matIconButton
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
-    <mat-icon>favorite</mat-icon>
-  </button>
+  <span>
+    <a matIconButton matTooltip="Home" routerLink="/home" routerLinkActive="is-active">
+      <mat-icon>home</mat-icon>
+    </a>
+  </span>
+  <span>
+    <a matIconButton matTooltip="Login" routerLink="/login" routerLinkActive="is-active">
+      <mat-icon>person</mat-icon>
+    </a>
+  </span>
 </mat-toolbar>
 
 <router-outlet />
 
-<crm-login />
+<!-- <crm-login /> -->
 
-<crm-dummy [label]="title()" (clicked)="display($event)" />
+<!-- <crm-dummy [label]="title()" (clicked)="display($event)" /> -->
