Amélioration du style

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,4 +1,4 @@
-<div class="login-form-container">
+<div class="login-container">
   <form id="login-form" [formGroup]="loginForm" (submit)="submit()">
     <p>
       <mat-form-field class="example-full-width">
@@ -30,7 +30,7 @@
       />
     </p>
 
-    <button mat-button type="submit" [disabled]="loginForm.invalid" color="primary">
+    <button mat-raised-button type="submit" [disabled]="loginForm.invalid" color="primary">
       Validate
     </button>
   </form>
