--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,20 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  flex: 1;
+  overflow: auto;
+}
+
 .example-spacer {
   flex: 1 1 auto;
+}
+
+a.is-active {
+  background-color: lightgray;
 }
 
 .is-active {
