--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -1,9 +1,29 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: var(--mat-sys-surface-container-lowest);
+}
+
+.login-container {
   width: 100%;
+  max-width: 400px;
+  padding: 2rem;
+  border-radius: 8px;
+  background-color: var(--mat-sys-surface);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
 }
 
 .example-full-width {
   width: 100%;
+}
+
+button[mat-raised-button] {
+  margin-top: 1rem;
 }
